--- a/R_Crash_Course_Setting_Working_Directory.Rmd
+++ b/R_Crash_Course_Setting_Working_Directory.Rmd
@@ -1,7 +1,9 @@
 ---
 title: "Saving an R script and setting the working directory"
-author: "Willson Gaul"
-date: "1/22/2021"
+author:
+- "Willson Gaul"
+- "willson.gaul@ucdconnect.ie"
+date: "January 2021"
 output:
   pdf_document: default
   html_document: default
@@ -38,23 +40,24 @@ On the first line of your R script, type a short comment to explain what the scr
 
 
 ## Step 6 - Set the working directory
-Setting the working directory tells R where to look for files.  "Directory" is another word for "folder" on a computer.  Basically, you want to tell R what folder your R script is saved in.  Later, you will save your data in this same folder.
+Setting the working directory tells R where to look for files.  "Directory" is another word for "folder" on a computer.  Basically, you want to tell R what folder your R script is saved in.  Later, you will save your data in the same folder.
 
 There are a few different ways to set the working directory.  You can do it by pointing and clicking in RStudio, or by typing a command into your R script.  
 
-To set the working directory by pointing and clicking in RStudio, click in the Menu bar **Session -> Set Working Directory -> Choose Directory** and then select the folder you created in Step 1.  When you do this, R will run the command in the console.  The command will look something like this (but inside the quotation marks will be the file path to your folder, rather than the file path to my folder on my computer):
-```{r, include = FALSE, echo=TRUE, eval=FALSE}
-setwd("~/Documents/Rworkshop/DataPractice/")
+To set the working directory by pointing and clicking in RStudio, click in the Menu bar **Session >> Set Working Directory >> Choose Directory** and then select the folder you created in Step 1.  When you do this, R will run the command in the console.  The command will look something like this:
+```{r, echo=TRUE, eval=FALSE}
+setwd("~/Documents/Rworkshop/")
 ```
+but inside the quotation marks will be the file path to your folder, rather than the file path to my folder on my computer.
 
-You should copy this command from the console, and paste it into your R script below the header.  Because this is R code that you want the computer to run, you should not use a `#` at the start of the line.  My script looks like this (yours will have a different file path inside the `setwd()` command):
+Copy this command from the console, and paste it into your R script below the header.  Because this is R code that you want the computer to run, you should not use a `#` at the start of the line.  My script looks like this (yours will have a different file path inside the `setwd()` command):
 ```{r, echo = T, eval = F}
 ## Practice R Script - learning to set the working directory
 # author: Willson Gaul willson.gaul@ucdconnect.iee
 # date: 21 Jan. 2021
 ##
 
-setwd("~/Documents/Rworkshop/DataPractice/")
+setwd("~/Documents/Rworkshop/)
 ```
 
 Next time you work on this script in R, you will not need to set the working directory by pointing and clicking.  Instead, you can run that line of code to set the working directory.
@@ -72,7 +75,8 @@ If you cannot find your script, or it doesn't look the same, you should go throu
 Congratulations!  You now have an R script saved in a folder dedicated to this data analysis project.  You are ready to move on to saving and loading data.
 
 \newpage
-Here is a brief summary of these steps, which you should follow every time you start an new analysis.
+##Summary
+Here is a brief summary of these steps, which you should follow every time you start a new analysis.
 
 1) Create a folder on your computer for this analysis
 2) Open RStudio
